// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Label Component] renders Default without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Disabled without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label--disabled rcx-label"
    >
      Label
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Info without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
      <span
        class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
      >
        <span
          hidden=""
        >
          this is a label info
        </span>
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
          title="this is a label info"
        >
          
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders InfoRequiredReset without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-g1wnuz"
    >
      <label
        class="rcx-box rcx-box--full rcx-label"
      >
        Label
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
          >
            this is a label info
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="this is a label info"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-label__reset"
      >
        <button
          aria-label="reset to default"
          class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--square rcx-button--icon rcx-button"
          title="reset to default"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-undo rcx-icon rcx-css-1tg7yd0"
          >
            ❰
          </i>
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Label Component] renders Required without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label"
    >
      Label
      <span
        aria-hidden="true"
        class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
      >
        *
      </span>
    </label>
  </div>
</body>
`;

exports[`[Label Component] renders Reset without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-g1wnuz"
    >
      <label
        class="rcx-box rcx-box--full rcx-label"
      >
        Label
      </label>
      <span
        class="rcx-box rcx-box--full rcx-label__reset"
      >
        <button
          aria-label="reset to default"
          class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--square rcx-button--icon rcx-button"
          title="reset to default"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-undo rcx-icon rcx-css-1tg7yd0"
          >
            ❰
          </i>
        </button>
      </span>
    </div>
  </div>
</body>
`;
